force-app/main/default/objects/WebserviceLog__c/WebserviceLog__c.object-meta.xml
<CustomObject>
    <label>Webservice Log</label>
    <nameField>
        <displayFormat>WSL-{0000000000}</displayFormat>
        <label>Webservice Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>