force-app/main/default/objects/WebserviceLog__c/fields/HttpRepsonse__c.field-meta.xml
<CustomField>
    <fullName>HttpRepsonse__c</fullName>
    <label>Http Repsonse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>