force-app/main/default/objects/WebserviceLog__c/fields/HttpStatus__c.field-meta.xml
<CustomField>
    <fullName>HttpStatus__c</fullName>
    <label>Http Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>