force-app/main/default/objects/WebserviceLog__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>