force-app/main/default/objects/WebserviceLog__c/listViews/Stauts_Error.listView-meta.xml
<ListView>
    <fullName>Stauts_Error</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Status - Error</label>
</ListView>